package utm;

public enum  MoveLRTM implements Move{
        /** The Rest movement of a Left TM. */
        RESET;
}
